[gd_scene load_steps=17 format=3 uid="uid://bubdrjydtjbiv"]

[ext_resource type="Script" path="res://Scenes/Enemies/enemy.gd" id="1_00eur"]
[ext_resource type="Material" uid="uid://diahf18ov4nsv" path="res://Resources/Materials/flash_and_burn.tres" id="2_460yr"]
[ext_resource type="Texture2D" uid="uid://cd1w8e3nygtfu" path="res://Assets/Entities/scorpio.png" id="2_d751p"]
[ext_resource type="PackedScene" uid="uid://dix3ti8a5xl3s" path="res://Scenes/EnemyComponents/health_component.tscn" id="3_c4ad0"]
[ext_resource type="PackedScene" uid="uid://c3cnagatm70qu" path="res://Scenes/EnemyComponents/velocity_component.tscn" id="4_jlth6"]
[ext_resource type="PackedScene" uid="uid://cp106tsdwum4x" path="res://Scenes/Misc/effects.tscn" id="4_qaigw"]
[ext_resource type="PackedScene" uid="uid://et20dn5wcy5r" path="res://Scenes/EnemyComponents/hurtbox.tscn" id="5_qcot7"]
[ext_resource type="PackedScene" uid="uid://bxjc0fqwygd20" path="res://Scenes/EnemyComponents/hitbox.tscn" id="6_cro4v"]
[ext_resource type="AudioStream" uid="uid://u2tw7amfvtja" path="res://Assets/SFX/hit.mp3" id="9_u8r7s"]

[sub_resource type="Animation" id="Animation_nkjor"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.125, 0.125)]
}

[sub_resource type="Animation" id="Animation_nlywe"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -24), Vector2(0, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.125, 0.125), Vector2(0.125, 0.1)]
}

[sub_resource type="Animation" id="Animation_guic1"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -24), Vector2(0, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.125, 0.125), Vector2(0.125, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f1rlc"]
_data = {
"RESET": SubResource("Animation_nkjor"),
"walk_left": SubResource("Animation_nlywe"),
"walk_right": SubResource("Animation_guic1")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gvkd3"]
radius = 18.0
height = 92.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1up2b"]
radius = 18.0
height = 92.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3tvf2"]
radius = 20.0
height = 96.0

[node name="Scorpio" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_00eur")
max_health = 4

[node name="Sprite" type="Sprite2D" parent="."]
material = ExtResource("2_460yr")
position = Vector2(0, -24)
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_d751p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
root_node = NodePath("../..")
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_f1rlc")
}

[node name="Effects" parent="Sprite" instance=ExtResource("4_qaigw")]

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_gvkd3")

[node name="HealthComponent" parent="." instance=ExtResource("3_c4ad0")]

[node name="VelocityComponent" parent="." instance=ExtResource("4_jlth6")]

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health_component", "collision_shape") instance=ExtResource("5_qcot7")]
health_component = NodePath("../HealthComponent")
collision_shape = NodePath("CollisionShape")

[node name="CollisionShape" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1up2b")

[node name="Hitbox" parent="." instance=ExtResource("6_cro4v")]

[node name="CollisionShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3tvf2")
debug_color = Color(1, 0, 0.109804, 0.419608)

[node name="IndicatorMarker" type="Marker2D" parent="."]
position = Vector2(0, -67)

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_u8r7s")
bus = &"Sounds"
